umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_tetrahedrane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 6
    topology: C~
    atoms:
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 6
    topology: C~
    atoms:
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CHv3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
