umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_clf3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "Cl#n2#v3"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "Cl#n2#v3"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
