umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_clo4-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "{Clv7}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O-/3v1}"
    bonds:
      - "="
      - "="
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "{Clv7}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O-/3v1}"
    bonds:
      - "="
      - "="
      - "="
      - "-"
