umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_h2so3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`EG"
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "S#n#v4"
      - "O#n2#v2"
      - "O#n2#v2"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`EG"
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "S#n#v4"
      - "O#n2#v2"
      - "O#n2#v2"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
