umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_h2so4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 1 has 3 valence matches: {O/2v2}, {O/1v2a2}, {O+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 6
    topology: "F_`oG"
    atoms:
      - "{Hv1}"
      - "{O/2v2}"
      - "{Sv6}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
      - "-"
      - "-"
