umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_hclo2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "Cl#n2#v3"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "Cl#n2#v3"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
